--- a/styleObjetivos.css
+++ b/styleObjetivos.css
@@ -93,7 +93,7 @@ h4{
   width: 180px;
   height: 25px;
   position: relative;
-  background: #ff9d3f;
+  background: #66ff66;
   top: 5px;
   left: -4px;
 }
@@ -116,7 +116,7 @@ h4{
   bottom: 0;
   width: 0;
   height: 0;
-  border-left: 12.98px solid #ff9d3f;
+  border-left: 12.98px solid #66ff66;
   border-top: 13px solid transparent;
   border-bottom: 12.98px solid transparent;
 }
