--- a/style.css
+++ b/style.css
@@ -212,130 +212,6 @@ header h1 {
     border-radius: 5px;
 }
 
-.bigger {
-  margin: 0;
-  font-size: 60px;
-  font-weight: 800;
-  padding: 20px;
-  text-transform: uppercase;
-  color: #202020;
-  display: inline-block;
-  position: relative;
-}
-
-.text {
-  max-width: 600px;
-  width: 100%;
-  line-height: 24px;
-  text-align: left;
-  color: #404040;
-  padding: 20px;
-}
-.text.txt-center {
-  text-align: center;
-}
-.text a {
-  color: #0fe4d2;
-}
-
-.has-animation {
-  position: relative;
-}
-.has-animation p, .has-animation img {
-  opacity: 0;
-}
-.has-animation.animate-in p, .has-animation.animate-in img {
-  animation: textHidden 0.1s 1.1s forwards;
-}
-.has-animation.animate-in:before, .has-animation.animate-in:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 100%;
-  z-index: 10;
-}
-.has-animation.animate-in:before {
-  background-color: #0fe4d2;
-}
-.has-animation.animate-in:after {
-  background-color: #202020;
-  animation-delay: .5s;
-}
-.has-animation.animation-ltr.animate-in:before {
-  animation: revealLTR 1.8s ease;
-}
-.has-animation.animation-ltr.animate-in:after {
-  animation: revealLTR 1s .6s ease;
-}
-.has-animation.animation-rtl.animate-in:before {
-  animation: revealRTL 1.8s ease;
-}
-.has-animation.animation-rtl.animate-in:after {
-  animation: revealRTL 1s .6s ease;
-}
-
-@keyframes revealRTL {
-  0% {
-    width: 0;
-    right: 0;
-  }
-  65% {
-    width: 100%;
-    right: 0;
-  }
-  100% {
-    width: 0;
-    right: 100%;
-  }
-}
-@keyframes revealLTR {
-  0% {
-    width: 0;
-    left: 0;
-  }
-  65% {
-    width: 100%;
-    left: 0;
-  }
-  100% {
-    width: 0;
-    left: 100%;
-  }
-}
-@keyframes textHidden {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-
-/*
-#escenario{
-  display: block;
-  position: relative;
-  background: #F7DC6F;
-  margin-left: auto;
-  margin-right: auto;
-  top:15px;
-  width: 900px;
-  height: 858px;   
-}
-
-#contenidoGeneral{
-
-  display: block;
-  background: #ECF0F1;
-  margin-left: auto;
-  margin-right: auto;
-  width: 1100px;
-  top:3px;
-  height: 500px;
-}
-*/
 section, article, div, .box {
   overflow: hidden;
   position: relative;
@@ -880,4 +756,128 @@ width: 90.5%;
 /* IMAGEN INTRODUCCION*/
 #muñecoIntro {
   margin: 25px 0px;
+}
+
+#bigger {
+  margin: 0;
+  font-size: 40px;
+  font-weight: 600;
+  padding: 10px;
+  text-transform: uppercase;
+  display: inline-block;
+  position: relative;
+  font-family: Sansita;
+  margin: auto 35px;
+  font-style: normal;
+  text-shadow: 0px 1px 2px #0fe4d2;
+  line-height: 50px;
+
+}
+
+#text {
+  max-width: 600px;
+  width: 50%;
+  height: 60%;
+  line-height: 35px;
+  text-align: left;
+  color: #404040;
+  margin: 145px 33px;
+  text-align: justify;
+font-size: 22px;
+border-radius: 20px;
+font-family: Sansita;
+border: 3px #0fe4d2 groove;
+box-shadow: 6px 6px 6px #0fe4d2;
+
+}
+
+#text span {
+  font-style: normal;
+}
+
+#bigger span {
+  font-style: normal;
+}
+
+#text.txt-center {
+  text-align: center;
+
+}
+
+#text a {
+  color: #0fe4d2; 
+}
+
+.has-animation {
+  position: initial;
+}
+.has-animation p, .has-animation img {
+  opacity: 0;
+}
+.has-animation.animate-in p, .has-animation.animate-in img {
+  animation: textHidden 0.1s 1.1s forwards;
+}
+.has-animation.animate-in:before, .has-animation.animate-in:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  z-index: 10;
+}
+.has-animation.animate-in:before {
+  background-color: #0fe4d2;
+}
+.has-animation.animate-in:after {
+  background-color: #202020;
+  animation-delay: .5s;
+}
+.has-animation.animation-ltr.animate-in:before {
+  animation: revealLTR 1.8s ease;
+}
+.has-animation.animation-ltr.animate-in:after {
+  animation: revealLTR 1s .6s ease;
+}
+.has-animation.animation-rtl.animate-in:before {
+  animation: revealRTL 1.8s ease;
+}
+.has-animation.animation-rtl.animate-in:after {
+  animation: revealRTL 1s .6s ease;
+}
+
+@keyframes revealRTL {
+  0% {
+    width: 0;
+    right: 0;
+  }
+  65% {
+    width: 100%;
+    right: 0;
+  }
+  100% {
+    width: 0;
+    right: 100%;
+  }
+}
+@keyframes revealLTR {
+  0% {
+    width: 0;
+    left: 0;
+  }
+  65% {
+    width: 100%;
+    left: 0;
+  }
+  100% {
+    width: 0;
+    left: 100%;
+  }
+}
+@keyframes textHidden {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
