--- a/styleTema2.css
+++ b/styleTema2.css
@@ -437,6 +437,7 @@ font-weight: bold;
   line-height: 1.3;
   color: #76716f;
   display: none;
+  height: 470px;
 }
 
 .menu__wrapper .menu__item.item-active {
@@ -678,4 +679,356 @@ font-weight: bold;
   to {
     transform: scale(0.9);
   }
+}
+
+/*-----------------------------
+* CARRUSEL - PESTAÑA 2 
+-------------------------------*/
+
+* {
+  box-sizing: border-box;
+}
+
+.slider {
+  width: 100%;
+  max-width: 910px;
+  margin: 20px auto;
+  position: relative;
+  height: 430px;
+}
+
+.slider-inner {
+  position: relative;
+  overflow: hidden;
+  width: 910px;
+  height: 430px;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+}
+
+.slider-container {
+  display: block;
+  width: 500%;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  position: absolute;
+  font-size: 0;
+}
+
+.slider-item {
+  height: 430px;
+  line-height: 260px;
+  width: 20%;
+  padding: 20px;
+  display: inline-block;
+  vertical-align: top;
+  text-align: center;
+  font-family: Georgia, serif;
+  font-style: italic;
+  color: #000000;
+  font-size: 1rem;
+}
+
+.slider-item:nth-child(1) {
+  background: #c8f7c8;
+  font-size: 4rem;
+}
+
+.slider-item:nth-child(2) {
+  background: #defcde;
+  font-size: 4rem;
+}
+
+.slider-item:nth-child(3) {
+  background: #f4766e;
+  font-size: 4rem;
+}
+
+.slider-item:nth-child(4) {
+  background: #5f3f02;
+  font-size: 4rem;
+}
+
+.slider-item:nth-child(5) {
+  background: #beec44;
+  font-size: 4rem;
+}
+
+.slider-nav {
+  position: absolute;
+  height: 300px;
+  width: 100%;
+  height: 430px;
+  top: 0;
+  left: 0;
+}
+
+.slider-nav-link {
+  font-size: 0;
+  display: block;
+  position: absolute;
+  top: 50%;
+  margin-top: -15px;
+  width: 32px;
+  height: 32px;
+  background: rgba(81, 90, 12, 0.89);
+  border-radius: 50%;
+}
+
+.slider-nav-link::before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -7px;
+  content: "";
+  width: 0;
+  height: 0;
+  border-style: solid;
+}
+
+.slider-nav-link.prev {
+  left: 10px;
+}
+
+.slider-nav-link.prev::before {
+  margin-left: -7px;
+  border-width: 7px 10px 7px 0;
+  border-color: transparent #fff transparent transparent;
+}
+
+.slider-nav-link.next {
+  right: 10px;
+}
+
+.slider-nav-link.next::before {
+  margin-left: -4px;
+  border-width: 7px 0 7px 10px;
+  border-color: transparent transparent transparent #fff;
+}
+
+.slider-pager {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  bottom: 10px;
+  left: 0;
+}
+
+.slider-pager-item {
+  display: inline-block;
+}
+
+.slider-pager-link {
+  font-size: 0;
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  border: 2px solid rgba(81, 90, 12, 0.89);
+  display: block;
+  margin: 2px;
+}
+
+.slider-pager-link.active {
+  border-color: rgba(81, 90, 12, 0.89);
+  background: rgba(81, 90, 12, 0.89);
+}
+
+/*-----------------------------
+* TEMA 2 - SUBTITULOS 
+-------------------------------*/
+
+#defArboles {
+  margin-top: -20px;
+  margin-left: -555px;
+}
+
+#subtitulo1 {
+  padding-bottom: 0em;
+  color: #000000;
+  font-family: 'Open Sans', sans-serif;
+  text-shadow: 0 0 0.2em #F87, 0 0 0.2em #F87;
+  height: 0px;
+  font-size: 20px;
+  font-weight: bold;
+  margin-left: 40px;
+  margin-top: 20px;
+}
+
+#subtitulo1 span {
+    font-style: normal;
+  }
+
+#subtitulo2 {
+  padding-bottom: 0em;
+  color: #000000;
+  font-family: 'Open Sans', sans-serif;
+  text-shadow: 0 0 0.2em #F87, 0 0 0.2em #F87;
+  height: 0px;
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 240px;
+  margin-left: 40px;
+}
+
+#subtitulo2 span {
+    font-style: normal;
+  }
+
+  /*-----------------------------
+* TEMA 2 - PRIMER PARRAFO 
+-------------------------------*/
+
+  #texto1 {
+  padding-bottom: 0em;
+  color: #000000;
+  font-family: 'Open Sans', sans-serif;
+  height: 0px;
+  font-size: 20px;
+  margin-top: 50px;
+  margin-left: 40px;
+}
+
+#texto1 span {
+  font-style: normal;
+}
+
+/*-----------------------------
+* TEMA 2 - CIRCULOS 
+-------------------------------*/
+
+.formas {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.circulo {
+  margin: 93px;
+  border: 1px solid #ccc;
+  font-family: Sansita;
+  color: #00000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 60px;
+  line-height: 1;
+  font-size: 17px;
+  height: 60px;
+  width: 1px;
+  background: linear-gradient(to bottom, #ffff00 0%, #99ff66 100%);
+}
+
+.circulo b {
+  margin-top: -80px;
+  margin-left: 20px;
+}
+
+.circulo span {
+  margin-left: -60px;
+}
+
+.circulo1 {
+  margin: 93px;
+  border: 1px solid #ccc;
+  font-family: Sansita;
+  color: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 60px;
+  line-height: 1;
+  font-size: 17px;
+  height: 60px;
+  width: 1px;
+  left: -120px;
+  background: linear-gradient(to bottom, #ffff00 0%, #99ff66 100%);
+}
+
+.circulo1 b {
+  margin-top: -80px;
+  margin-left: 30px;
+}
+
+.circulo1 span {
+  margin-left: -65px;
+}
+
+.circle {
+  border-radius: 50%;
+  flex-grow: 0;
+}
+
+.bottom-left {
+  box-shadow: -5px 5px 5px 0px #333;
+}
+
+/*-----------------------------
+* TEMA 2 - CUADRO DE TEXTO 
+-------------------------------*/
+
+.forma2 {
+  display: flex;
+  flex-wrap: wrap;
+  top: -20px;
+}
+
+.cuadro {
+  border: 1px solid #ccc;
+  font-family: Sansita;
+  color: #000000;
+  display: flex;
+  align-items: left;
+  justify-content: center;
+  text-align: left;
+  line-height: 1;
+  font-size: 17px;
+  width: 400px;
+  padding: 15px 15px 15px 15px;   
+  margin-left: 45px;
+  background: linear-gradient(to right, #ffffcc 0%, #ffff00 100%);
+}
+
+.inset {
+  box-shadow: inset 0 0 20px #333;
+  border-radius: 10px 10px 10px 10px;
+}
+
+#subtitulo3 {
+  padding-bottom: 0em;
+  color: #000000;
+  font-family: 'Open Sans', sans-serif;
+  text-shadow: 0 0 0.2em #F87, 0 0 0.2em #F87;
+  height: 0px;
+  font-size: 20px;
+  font-weight: bold;
+  margin-left: 580px;
+  margin-top: 20px;
+}
+
+/*-----------------------------
+* TEMA 2 - ARBOL BINARIO 
+-------------------------------*/
+
+#subtitulo3 span {
+    font-style: normal;
+  }
+
+#arbolB {
+  margin: 60px -50px;
+}
+
+
+
+
+#subRecorridos {
+
+}
+
+.slider-item div {
+  overflow: visible;
 }
