--- a/styleTema2.css
+++ b/styleTema2.css
@@ -736,7 +736,7 @@ font-weight: bold;
 }
 
 .slider-item:nth-child(2) {
-  background: #defcde;
+  background: #F5F6CE;
   font-size: 4rem;
 }
 
@@ -1022,16 +1022,285 @@ font-weight: bold;
   margin: 60px -50px;
 }
 
-
-
+/*--------------------------------
+* PESTAÑA 2 - STEP 2 - SUBTITULOS 
+----------------------------------*/
 
 #subRecorridos {
-
+  margin-top: -20px;
+  margin-left: 356px;
 }
 
 .slider-item div {
   overflow: visible;
 }
+
+#subtitulo4 {
+  padding-bottom: 0em;
+  color: #000000;
+  font-family: 'Open Sans', sans-serif;
+  text-shadow: 0 0 0.2em #FA8072, 0 0 0.2em #FA8072;
+  height: 0px;
+  font-size: 20px;
+  font-weight: bold;
+  margin-left: 110px;
+  margin-top: 32px;
+}
+
+#subtitulo4 span {
+  font-style: normal;
+  }
+
+#subtitulo5 {
+  padding-bottom: 0em;
+  color: #000000;
+  font-family: 'Open Sans', sans-serif;
+  text-shadow: 0 0 0.2em #9AFE2E, 0 0 0.2em #9AFE2E;
+  height: 0px;
+  font-size: 20px;
+  font-weight: bold;
+  margin-left: 390px;
+  margin-top: 32px;
+}
+
+#subtitulo5 span {
+  font-style: normal;
+  }
+
+#subtitulo6 {
+  padding-bottom: 0em;
+  color: #000000;
+  font-family: 'Open Sans', sans-serif;
+  text-shadow: 0 0 0.2em #00FFBF, 0 0 0.2em #00FFBF;
+  height: 0px;
+  font-size: 20px;
+  font-weight: bold;
+  margin-left: 660px;
+  margin-top: 32px;
+}
+
+#subtitulo6 span {
+    font-style: normal;
+  }
+
+/*--------------------------------
+* PESTAÑA 2 - STEP 2 - NUMEROS
+----------------------------------*/
+
+#salmon {
+  background: #FA8072;
+  border-radius: 0.4em;
+  -moz-border-radius: 0.4em;
+  -webkit-border-radius: 0.4em;
+  color: #ffffff;
+  display: inline-block;
+  font-weight: bold;
+  line-height: 1.6em;
+  margin-right: 15px;
+  text-align: center;
+  width: 1.6em; 
+  font-size: 18px;
+  font-family: 'Open Sans', sans-serif;
+  margin-left: -360px;
+  margin-top: 37px;
+  height: 30px;
+  padding: 0px;
+}
+
+#salmon span {
+  font-style: normal;
+}
+
+#verde {
+  background: #9AFE2E;
+  border-radius: 0.4em;
+  -moz-border-radius: 0.4em;
+  -webkit-border-radius: 0.4em;
+  color: #ffffff;
+  display: inline-block;
+  font-weight: bold;
+  line-height: 1.6em;
+  margin-right: 15px;
+  text-align: center;
+  width: 1.6em; 
+  font-size: 18px;
+  font-family: 'Open Sans', sans-serif;
+  margin-left: -80px;
+  margin-top: 37px;
+  height: 30px;
+  padding: 0px;
+}
+
+#verde span {
+  font-style: normal;
+}
+
+#azul {
+  background: #00FFBF;
+  border-radius: 0.4em;
+  -moz-border-radius: 0.4em;
+  -webkit-border-radius: 0.4em;
+  color: #ffffff;
+  display: inline-block;
+  font-weight: bold;
+  line-height: 1.6em;
+  margin-right: 15px;
+  text-align: center;
+  width: 1.6em; 
+  font-size: 18px;
+  font-family: 'Open Sans', sans-serif;
+  margin-left: 190px;
+  margin-top: 37px;
+  height: 30px;
+  padding: 0px;
+}
+
+#azul span {
+  font-style: normal;
+}
+
+/*--------------------------------
+* PESTAÑA 2 - STEP 2 - CAJAS 
+----------------------------------*/
+.freelancer {
+  font-size: 16px;
+  line-height: 1;
+  clear: both;
+  letter-spacing: 0.5px;
+  margin-bottom: 80px;
+  color: #000000;
+  margin-top: 17px;
+  width: 160px;
+  margin-left: 12px;
+  font-family: Sansita;
+  font-style: normal;
+}
+
+.loading {
+  text-align: center;
+  position: absolute;
+  left: 23%;
+  top: 90px;
+  margin: 50px 0 0 -60px;
+  background: ;
+  width: 200px;
+  height: 200px;
+  border-radius: 100%;
+  border: 10px solid #FA8072;
+  padding: 0px;
+  background: linear-gradient(to bottom, #ff9999 0%, #ffcccc 100%);
+}
+
+.loading:after {
+  content: '';
+  background: trasparent;
+  width: 140%;
+  height: 140%;
+  position: absolute;
+  border-radius: 100%;
+  top: -20%;
+  left: -20%;
+  opacity: 0.7;
+  box-shadow: rgba(255, 0, 0, 0.9) -4px -5px 3px -3px;
+  animation: rotate 2s infinite linear;
+
+}
+
+.freelancer1 {
+  font-size: 16px;
+  line-height: 1;
+  clear: both;
+  letter-spacing: 0.5px;
+  margin-bottom: 80px;
+  color: #000000;
+  margin-top: 20px;
+  width: 160px;
+  margin-left: 13px;
+  font-family: Sansita;
+  font-style: normal;
+}
+
+.loading1 {
+  text-align: center;
+  position: absolute;
+  left: 29%;
+  top: 90px;
+  margin: 50px 0 0 -60px;
+  background: ;
+  width: 200px;
+  height: 200px;
+  border-radius: 100%;
+  border: 10px solid #9AFE2E;
+  padding: 0px;
+  background: linear-gradient(to bottom, #ccff66 0%, #ffffcc 100%);
+}
+
+.loading1:after {
+  content: '';
+  background: trasparent;
+  width: 140%;
+  height: 140%;
+  position: absolute;
+  border-radius: 100%;
+  top: -20%;
+  left: -20%;
+  opacity: 0.7;
+  box-shadow: #9AFE2E -4px -5px 3px -3px;
+  animation: rotate 2s infinite linear;
+}
+
+.freelancer2 {
+  font-size: 16px;
+  line-height: 1;
+  clear: both;
+  letter-spacing: 0.5px;
+  margin-bottom: 80px;
+  color: #000000;
+  margin-top: 9px;
+  width: 160px;
+  margin-left: 13px;
+  font-family: Sansita;
+  font-style: normal;
+}
+
+.loading2 {
+  text-align: center;
+  position: absolute;
+  left: 35%;
+  top: 90px;
+  margin: 50px 0 0 -60px;
+  background: ;
+  width: 200px;
+  height: 200px;
+  border-radius: 100%;
+  border: 10px solid #00FFBF;
+  padding: 0px;
+  background: linear-gradient(to bottom, #66ffcc 0%, #ccffff 100%);
+}
+
+.loading2:after {
+  content: '';
+  background: trasparent;
+  width: 140%;
+  height: 140%;
+  position: absolute;
+  border-radius: 100%;
+  top: -20%;
+  left: -20%;
+  opacity: 0.7;
+  box-shadow: #00FFBF -4px -5px 3px -3px;
+  animation: rotate 2s infinite linear;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
+
 
 /*-----------------------------
 * TEMA 2 - PESTAÑA 3 
@@ -1305,3 +1574,11 @@ line-height: 15px;
 border: 3px #0fe4d2 groove;
 box-shadow: 6px 6px 6px #fff;
 }
+
+
+
+
+
+
+
+
