--- a/styleTema2.css
+++ b/styleTema2.css
@@ -1575,8 +1575,80 @@ border: 3px #0fe4d2 groove;
 box-shadow: 6px 6px 6px #fff;
 }
 
+.caja1-1 {
+  border-radius: 10px;
+  background: #EDE7F6;
+  padding: 20px;
+  box-shadow: 4px 4px 12px 1px rgba(0, 0, 0, 0.2);
+  line-height: 1px;
+  width: 377px;
+height: 5px;
+margin: -10px -10px;
+}
 
+.caja1 {
+  border-radius: 10px;
+  background: -webkit-linear-gradient(left, #D284AC 0%,#c4b0b0 42%, 52%, #b4abbf);
+  padding: 20px;
+  box-shadow: 10px 18px 12px 1px rgba(0, 0, 0, 0.2);
+  line-height: 1.5;
+  width: 400px;
+height: 170px;
+margin: 5px 210px;
+}
 
+.caja2 {
+  border-radius: 10px;
+  background: #D32F2F;
+  padding: 20px;
+  box-shadow: 10px 18px 12px 1px rgba(0, 0, 0, 0.2);
+  line-height: 1.5;
+   width: 400px;
+height: 170px;
+margin: 20px 210px;
+background: -webkit-linear-gradient(left, #D284AC 0%,#c4b0b0 42%, 52%, #b4abbf);
+}
+
+#nota {
+width: 180px;
+height: 130px;
+margin: -12px 80px;
+animation: wiggle 3s linear infinite;
+}
+
+@keyframes wiggle {
+  0%, 7% {
+    transform: rotateZ(0);
+  }
+  15% {
+    transform: rotateZ(-15deg);
+  }
+  20% {
+    transform: rotateZ(10deg);
+  }
+  25% {
+    transform: rotateZ(-10deg);
+  }
+  30% {
+    transform: rotateZ(6deg);
+  }
+  35% {
+    transform: rotateZ(-4deg);
+  }
+  40%, 100% {
+    transform: rotateZ(0);
+  }
+}
+#notaa {
+  margin: 130px 85px;
+}
+
+#flecha{
+  margin: 200px -555px;
+}
+#flecha2{
+  margin: 5px -555px;
+}
 
 
 
