--- a/styleTema2.css
+++ b/styleTema2.css
@@ -751,7 +751,7 @@ font-weight: bold;
 }
 
 .slider-item:nth-child(5) {
-  background: #beec44;
+  background: #F5F5DC;
   font-size: 4rem;
 }
 
@@ -1403,6 +1403,177 @@ margin-top: -12px;
   margin: 30px -244px;
 }
 
+/*-----------------------------
+* PESTAÑA 2 - STEP 5 
+-------------------------------*/
+
+#subRepresentacion {
+  margin: -40px -573px;
+}
+
+#subTipos {
+  margin: 200px -573px;
+}
+
+#texRepresentacion {
+  padding-bottom: 0em;
+  color: #000000;
+  font-family: 'Open Sans', sans-serif;
+  height: 0px;
+  font-size: 21px;
+  margin-top: 30px;
+  margin-left: 55px;
+  width: 750px;
+  line-height: 1;
+}
+
+#texRepresentacion span {
+  font-style: normal;
+}
+
+#logoR {
+  margin: 50px -185px;
+}
+
+.animated-box {
+  padding: 10px;
+  text-align: center;
+  border-radius: 4px;
+  width: 290px;
+  height: 130px;
+  top: 80px;
+  left: 60px;
+  background: linear-gradient(to bottom, #ccffcc 0%, #ccffff 100%);
+}
+
+.animated-box h1 {
+  font-size: 21px;
+  margin-top: -5px;
+  line-height: 1;
+  color: #000000;
+  font-family: Sansita;
+  font-style: normal;
+}
+
+.animated-box p {
+  font-weight: 200;
+}
+
+/* The animation starts here */
+.animated-box {
+  position: relative;
+}
+
+.animated-box:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 4px;
+  background: linear-gradient(120deg, #00F260, #0575E6, #00F260);
+  background-size: 300% 300%;
+  clip-path: polygon(0% 100%, 3px 100%, 3px 3px, calc(100% - 3px) 3px,
+             calc(100% - 3px) calc(100% - 3px), 
+             3px calc(100% - 3px), 3px 100%, 100% 100%, 100% 0%, 0% 0%);
+}
+
+.animated-box.in:after {
+  animation: frame-enter 1s forwards ease-in-out reverse, gradient-animation 4s ease-in-out infinite;
+}
+
+.animated-box2 {
+  padding: 10px;
+  text-align: center;
+  border-radius: 4px;
+  width: 290px;
+  height: 130px;
+  top: -50px;
+  left: 525px;
+  background: linear-gradient(to bottom, #ccffcc 0%, #ccffff 100%);
+}
+
+.animated-box2 h1 {
+  font-size: 21px;
+  margin-top: -5px;
+  line-height: 1;
+  color: #000000;
+  font-family: Sansita;
+  font-style: normal;
+}
+
+.animated-box2 p {
+  font-weight: 200;
+}
+
+/* The animation starts here */
+.animated-box2 {
+  position: relative;
+}
+
+.animated-box2:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 4px;
+  background: linear-gradient(120deg, #00F260, #0575E6, #00F260);
+  background-size: 300% 300%;
+  clip-path: polygon(0% 100%, 3px 100%, 3px 3px, calc(100% - 3px) 3px,
+             calc(100% - 3px) calc(100% - 3px), 
+             3px calc(100% - 3px), 3px 100%, 100% 100%, 100% 0%, 0% 0%);
+}
+
+.animated-box2.in:after {
+  animation: frame-enter 1s forwards ease-in-out reverse, gradient-animation 4s ease-in-out infinite;
+}
+
+/* motion */
+@keyframes gradient-animation {
+  0% {
+    background-position: 15% 0%;
+  }
+  50% {
+    background-position: 85% 100%;
+  }
+  100% {
+    background-position: 15% 0%;
+  }
+}
+
+@keyframes frame-enter {
+  0% {
+    clip-path: polygon(0% 100%, 3px 100%, 3px 3px, calc(100% - 3px) 3px, 
+    calc(100% - 3px) calc(100% - 3px), 3px calc(100% - 3px), 3px 100%, 100% 100%, 100% 0%, 0% 0%);
+  }
+  25% {
+    clip-path: polygon(0% 100%, 3px 100%, 3px 3px, calc(100% - 3px) 3px,
+    calc(100% - 3px) calc(100% - 3px), calc(100% - 3px) calc(100% - 3px), 
+    calc(100% - 3px) 100%, 100% 100%, 100% 0%, 0% 0%);
+  }
+  50% {
+    clip-path: polygon(0% 100%, 3px 100%, 3px 3px, calc(100% - 3px) 3px, 
+    calc(100% - 3px) 3px, calc(100% - 3px) 3px, calc(100% - 3px) 3px, 
+    calc(100% - 3px) 3px, 100% 0%, 0% 0%);
+  }
+  75% {
+    -webkit-clip-path: polygon(0% 100%, 3px 100%, 3px 3px, 3px 3px, 3px 3px, 3px 3px, 3px 3px, 3px 3px, 3px 0%, 0% 0%);
+  }
+  100% {
+    -webkit-clip-path: polygon(0% 100%, 3px 100%, 3px 100%, 3px 100%, 3px 100%, 3px 100%, 3px 100%, 3px 100%, 3px 100%, 0% 100%);
+  }
+}
+
+#genBin {
+  margin: 200px -310px;
+}
+
+#informatico {
+  margin: 205px 40px;
+}
 
 
 /*
