--- a/styleTema2.css
+++ b/styleTema2.css
@@ -2281,8 +2281,8 @@ line-height: 100px;
   float: left;
   margin: 0 0 1px 0;
   cursor: pointer;
-  padding: 0px 10%;
-  height: 32px;
+  padding: 0px 4%;
+  height: 58.5px;
   line-height: 31px;
   color: #333;
   border-bottom: 0px;
@@ -2291,8 +2291,13 @@ line-height: 100px;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
   background-color: #b2f0f1;
-  width: 80%;
+  width: 137px;
   left: 13px;
+  font-family: Open Sans, sans-serif;
+  font-weight: bold;
+  font-size: 14px;
+  color: #000000;
+  padding-top: 12px;
 }
 .v-tab .tab__head li:hover {
   background-color: #7fe6e8;
@@ -2308,10 +2313,10 @@ line-height: 100px;
 .v-tab .tab__container {
   border: 3px solid #00CED1;
   float: left;
-  width: 815px;
+  width: 780px;
   min-height: 200px;
-  left: -12px;
-  border-radius: 0 5px 5px 5px;
+  left: 25px;
+  border-radius: 0 5px 5px 0;
 }
 .v-tab .tab__content {
   padding: 20px;
